[gd_scene load_steps=9 format=3 uid="uid://dqijkmgdh5ulw"]

[ext_resource type="Script" path="res://Scenes/Menus/MainMenu/MainMenu.gd" id="1_qdm7w"]
[ext_resource type="Texture2D" uid="uid://cg1ymalfuxac" path="res://Resources/Images/New Piskel.png" id="1_s2rg6"]
[ext_resource type="Texture2D" uid="uid://gb0kvlkeqvp1" path="res://Resources/Images/testBack.png" id="2_sejcl"]
[ext_resource type="Theme" uid="uid://b15dltfliv1gb" path="res://Resources/Theme/Theme.tres" id="4_0yllo"]
[ext_resource type="Texture2D" uid="uid://dhygrefhjnums" path="res://Resources/Assets/Test/Platform_rossa.png" id="4_cs5qg"]
[ext_resource type="Texture2D" uid="uid://buwaq11fw15nu" path="res://Resources/Assets/Test/Platform_blu.png" id="6_0krrx"]
[ext_resource type="Texture2D" uid="uid://bxio167qqgrls" path="res://Resources/Assets/UI/icons8-sound-50.png" id="7_b1ts1"]
[ext_resource type="Texture2D" uid="uid://covdgg0f4qrqv" path="res://Resources/Assets/UI/icons8-no-audio-50.png" id="8_t0uxh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qdm7w")

[node name="Control2" type="Control" parent="."]
z_index = 2
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control2"]
layout_mode = 0
offset_right = 10603.0
offset_bottom = 5521.0
scale = Vector2(0.181089, 0.195609)
texture = ExtResource("2_sejcl")

[node name="Control" type="Control" parent="Control2"]
anchors_preset = 0
offset_left = 421.0
offset_top = 93.0
offset_right = 461.0
offset_bottom = 133.0

[node name="TextureRect" type="TextureRect" parent="Control2/Control"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 325.0
offset_top = 54.0
offset_right = 365.0
offset_bottom = 94.0
scale = Vector2(12.4, 5.68278)
texture = ExtResource("1_s2rg6")

[node name="Label" type="Label" parent="Control2/Control"]
layout_mode = 0
offset_left = 490.0
offset_top = 132.0
offset_right = 530.0
offset_bottom = 158.0
scale = Vector2(4.16664, 3.05855)
text = "Logo"
horizontal_alignment = 1

[node name="NewGame" type="Button" parent="Control2"]
layout_mode = 0
offset_left = 880.0
offset_top = 524.0
offset_right = 973.0
offset_bottom = 555.0
scale = Vector2(1.99241, 1.81114)
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../LevelSelect")
focus_next = NodePath("../LevelSelect")
focus_previous = NodePath("../Exit")
text = "New Game"

[node name="LevelSelect" type="Button" parent="Control2"]
layout_mode = 0
offset_left = 875.0
offset_top = 604.0
offset_right = 974.0
offset_bottom = 635.0
scale = Vector2(1.99241, 1.81114)
text = "Level Select
"

[node name="Exit" type="Button" parent="Control2"]
layout_mode = 0
offset_left = 888.0
offset_top = 687.0
offset_right = 987.0
offset_bottom = 718.0
scale = Vector2(1.7161, 1.81114)
text = "Exit
"

[node name="ColorRect" type="ColorRect" parent="Control2"]
layout_mode = 0
offset_left = 832.0
offset_top = 799.0
offset_right = 922.0
offset_bottom = 839.0
color = Color(0.247059, 0.247059, 0.247059, 1)

[node name="Music" type="CheckButton" parent="Control2/ColorRect"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 31.0
scale = Vector2(1, 1.332)
button_pressed = true
text = "Music"

[node name="ColorRect2" type="ColorRect" parent="Control2"]
layout_mode = 0
offset_left = 1000.0
offset_top = 799.0
offset_right = 1100.0
offset_bottom = 839.0
color = Color(0.247059, 0.247059, 0.247059, 1)

[node name="Sounds" type="CheckButton" parent="Control2/ColorRect2"]
layout_mode = 0
offset_right = 94.0
offset_bottom = 31.0
scale = Vector2(1, 1.332)
button_pressed = true
text = "Sounds
"

[node name="TextureNewGame" type="TextureButton" parent="Control2"]
visible = false
layout_mode = 0
offset_left = 904.0
offset_top = 527.0
offset_right = 1038.0
offset_bottom = 578.0
theme = ExtResource("4_0yllo")
texture_normal = ExtResource("4_cs5qg")
texture_focused = ExtResource("6_0krrx")

[node name="Label" type="Label" parent="Control2/TextureNewGame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_right = 61.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 27
text = "New Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureMusic" type="TextureButton" parent="Control2"]
visible = false
layout_mode = 0
offset_left = 848.0
offset_top = 871.0
offset_right = 898.0
offset_bottom = 921.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("8_t0uxh")
texture_pressed = ExtResource("7_b1ts1")

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="focus_entered" from="Control2/NewGame" to="." method="_on_button_focus"]
[connection signal="pressed" from="Control2/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="focus_entered" from="Control2/LevelSelect" to="." method="_on_button_focus"]
[connection signal="pressed" from="Control2/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="focus_entered" from="Control2/Exit" to="." method="_on_button_focus"]
[connection signal="pressed" from="Control2/Exit" to="." method="_on_exit_pressed"]
[connection signal="focus_entered" from="Control2/ColorRect/Music" to="." method="_on_button_focus"]
[connection signal="toggled" from="Control2/ColorRect/Music" to="." method="_on_music_toggled"]
[connection signal="focus_entered" from="Control2/ColorRect2/Sounds" to="." method="_on_button_focus"]
[connection signal="toggled" from="Control2/ColorRect2/Sounds" to="." method="_on_sounds_toggled"]
[connection signal="focus_entered" from="Control2/TextureNewGame" to="." method="_on_button_focus"]
[connection signal="pressed" from="Control2/TextureNewGame" to="." method="_on_new_game_pressed"]
[connection signal="focus_entered" from="Control2/TextureMusic" to="." method="_on_button_focus"]
[connection signal="toggled" from="Control2/TextureMusic" to="." method="_on_music_toggled"]
